Changing requirements file

--- a/GalleryAI/requirements.txt
+++ b/GalleryAI/requirements.txt
@@ -1,9 +1,9 @@
 streamlit
 pandas
-plotly-express
-scikit-learn
-joblib
-requests
 numpy
-tensorflow
+scikit-learn
+requests
+joblib
 Pillow
+plotly
+matplotlib
